# dict_interop

./: CMakeLists.txt
ctest/: compile.sh
src/: CMakeLists.txt  c_db.f90  compile.sh  db.f90  db.h  m_db.f90  m_dbval.f90  m_dbval@assignment.f90
test/: CMakeLists.txt  compile.sh  test_db.c  test_db.f90  test_dbval.f90
test/test_mixed/: cprog.c  fsub.f90
